[package]
name = "themelio-node"
version = "0.13.2"
repository ="https://github.com/themeliolabs/themelio-node"
license = "MPL-2.0"
description = "Reference implementation of Themelio"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
opt-level = 1 
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug = 0
lto = 'thin'
codegen-units = 1 

[patch.crates-io]
# themelio-stf={path="../themelio-stf"}
# # melnet={path="../melnet"}  
# themelio-nodeprot={path="../themelio-nodeprot"} 

[profile.release-dbg]
inherits = "release"
debug = 2 
panic = "abort"
lto = false
codegen-units = 32

[dependencies.gethostname]
version = "0.2.3"
optional = true

[dependencies.prometheus]
version = "0.13.2"
optional = true

[dependencies.public-ip]
version = "0.2.2"
optional = true

[dependencies.reqwest]
version = "0.11.12"
features = ["json", "rustls-tls"]
default-features = false
optional = true



[dependencies.rweb]
version = "0.15.0"
features = ["tls"]
optional = true

[dependencies.systemstat]
version = "0.1.12"
optional = true

[dependencies.async-compat]
version = "0.2.1"
optional = true


[dependencies]
themelio-nodeprot = { git = "https://github.com/themeliolabs/themelio-nodeprot", branch = "use-themelio-structs-0.3-beta" }

anyhow = "1.0.65"
# base64 = "0.13.0"
arc-swap = "1.5.1"

dashmap = "4.0.2"
default-net = { version = "0.6.0", optional = true }
env_logger = "0.9.1"
ethnum = "1.3.0"
fastrand = "1.8.0"
futures-util = "0.3.24"
hex = "0.4.3"
imbl = { version = "1.0.1", features = ["serde"] }
log = "0.4.17"
lru = "0.7.8"
melnet = "0.2.27"
# meshanina = {path="../meshanina"}
meshanina = "0.4.0"
novasmt = "0.2.19"
# novasymph = "0.3.1"
# novasymph={path="../novasymph"}
once_cell = "1.15.0"
parking_lot = "0.12.1"
serde = "1.0.145"
serde_json = { version = "1.0.85", features = ["arbitrary_precision"] }
defmac = "0.2.1"
smol = "1.2.5"
smolscale = "0.3.41"
smol-timeout = "0.6.0"
stdcode = "0.1.10"
structopt = "0.3.26"
tap = "1.0.1"
# tracing = "0.1.34"
# themelio-stf = { path = "../themelio-stf" }
tip911-stakeset = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }
themelio-stf = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }
melvm = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }

tmelcrypt = "0.2.4"
# themelio-bootstrap = "0.6.1"
themelio-bootstrap = { git = "https://github.com/themeliolabs/themelio-bootstrap", branch = "use-themelio-structs-0.3-beta" }
# tracing-subscriber = "0.3.11"
themelio-structs= "0.3.0-beta.5"
dhat = { version = "0.3.1", optional = true }
async-trait = "0.1.57"
clone-macro = "0.1.0"
lz4_flex = "0.8.2"
serde_with = "1.14.0"
serde_yaml = "0.8.26"
dirs = "4.0.0"
jemallocator-global = "0.3.2"
melnet2 = "0.1.4"
nanorpc = "0.1.8"
moka = "0.9.4"
event-listener = "2.5.3"
crossbeam-queue = "0.3.6"
libc = "0.2.137"
streamlette = "0.1.0"
thiserror = "1.0.37"
bytes = "1.2.1"
async-oneshot = "0.5.0"
rusqlite = {version="0.28.0", features=["bundled"]}
scopeguard = "1.1.0"
#lz4_flex = "0.9.3"

# [target.'cfg(unix)'.dependencies]
# mimalloc = "0.1.28"

[features]
metrics = ["prometheus", "gethostname", "public-ip", "reqwest", "rweb", "systemstat", "async-compat", "default-net"]
dhat-heap = ["dhat"]
