[package]
name = "melnode"
version = "0.20.4"
repository ="https://github.com/mel-project/melnode"
license = "MPL-2.0"
description = "Reference implementation of Mel"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
opt-level = 1 
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug = 0
# lto = 'thin'
# codegen-units = 1 

[patch.crates-io]
# melstf={path="../melstf"}
# tip911-stakeset={path="../melstf/lib/tip911-stakeset"}
# # melnet={path="../melnet"}  
# melprot={path="../melprot"} 

[profile.release-dbg]
inherits = "release"
debug = 2 
panic = "abort"
lto = false
codegen-units = 32

[dependencies.gethostname]
version = "0.2.3"
optional = true

[dependencies.prometheus]
version = "0.13.3"
optional = true

[dependencies.public-ip]
version = "0.2.2"
optional = true

[dependencies.reqwest]
version = "0.11.14"
features = ["json", "rustls-tls"]
default-features = false
optional = true



[dependencies]
# melprot = { git = "https://github.com/themeliolabs/melnodeprot", branch = "use-themelio-structs-0.3-beta" }
# melprot = { git = "https://github.com/themeliolabs/melprot", branch = "master" }

anyhow = "1.0.69"
# base64 = "0.13.0"
arc-swap = "1.6.0"

dashmap = "4.0.2"
default-net = { version = "0.6.0", optional = true } 
env_logger = "0.9.3"
ethnum = "1.3.2"
fastrand = "1.9.0"
futures-util = "0.3.26"
hex = "0.4.3"
imbl = { version = "1.0.1", features = ["serde"] }
log = "0.4.17"
lru = "0.7.8"

# meshanina = {path="../meshanina"}
meshanina = "0.4.2"
novasmt = "0.2.20"
# novasymph = "0.3.1"
# novasymph={path="../novasymph"}
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = "1.0.152"
serde_json = { version = "1.0.93", features = ["arbitrary_precision"] }
defmac = "0.2.1"
smol = "1.3.0"
smolscale = "0.3.52"
smol-timeout = "0.6.0"
stdcode = "0.1.14"

tap = "1.0.1"
# tracing = "0.1.34"
#themelio-stf = { path = "../themelio-stf" }
#tip911-stakeset = { path = "../themelio-stf/lib/tip911-stakeset" }
# tip911-stakeset = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }
# themelio-stf = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }
# melvm = { git = "https://github.com/themeliolabs/themelio-stf", branch = "applytx-refactors" }

tmelcrypt = "0.2.7"

dhat = { version = "0.3.2", optional = true }
async-trait = "0.1.64"
clone-macro = "0.1.0"
lz4_flex = "0.9.5"
serde_with = "1.14.0"
serde_yaml = "0.8.26"
dirs = "4.0.0"
jemallocator-global = "0.3.2"
melnet2 = "0.3.1"
nanorpc = "0.1.12"
moka = "0.9.7"
event-listener = "2.5.3"
crossbeam-queue = "0.3.8"
libc = "0.2.139"
streamlette = "0.2.7"
thiserror = "1.0.38"
bytes = "1.4.0"
async-oneshot = "0.5.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
scopeguard = "1.1.0"
base64 = "0.21.0"

clap = { version = "4.1.6", features = ["derive", "cargo", "unicode"] }
melbootstrap = "0.8.3"
melstructs = "0.3.2"
melblkidx = "0.7.1"
melstf = "0.12.3"
tip911-stakeset = "0.0.2"
melvm = "0.1.0"
melprot = "0.13.2"
#lz4_flex = "0.9.3"

# [target.'cfg(unix)'.dependencies]
# mimalloc = "0.1.28"
