[package]
name = "melminter"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodeprot={path="../../libs/nodeprot"}
blkstructs={path="../../libs/blkstructs"}
stdcode={path="../../libs/stdcode"}
tmelcrypt={path="../../libs/tmelcrypt"}
melpow={path="../../libs/melpow"}
structopt="0.3"
tracing-subscriber = "0.2.16"
log="0.4"
tracing="0.1"
smolscale="0.2"
smol="1"
anyhow="1"
serde={version="1", features=["derive"]}
serde_json="1"
hex="0.4"