[package]
name = "themelio-bxms"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol="1.2.5"
anyhow="1"
blkstructs={path="../../libs/blkstructs"}
tmelcrypt={path="../../libs/tmelcrypt"} 
nodeprot={path="../../libs/nodeprot"}
structopt="0.3.21"
once_cell="1"
hex="0.4"

tracing-subscriber = "0.2.16"

log="0.4"
tracing="0.1"

askama="0.8"

serde={version="1", features=["derive"]}
num-traits="0.2"

futures-util="0.3"