[package]
name = "themelio-bxms"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol= "1.2.5"
anyhow= "1.0.40"
themelio-stf= "0.3.0"
tmelcrypt= "0.1.0"
themelio-nodeprot="0.1"
structopt= "0.3.21"
once_cell= "1.7.2"
hex= "0.4.3"

tracing-subscriber = "0.2.18"

log= "0.4.14"
tracing= "0.1.26"

askama= "0.8"

serde={ version = "1.0.126", features = ["derive"] }
num-traits= "0.2.14"

futures-util= "0.3.15" 
chrono={ version = "0.4.19", features = ["serde"] }
serde_json= "1.0.64"
