[package]
name = "themelio-client"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

[dependencies]
anyhow="1"
im="15"
hex="0.4"
rustyline = "7.1.0"
serde={version="1", features=["derive"]}
sled="0.34.6"
smol="1"
smol-timeout="0.6.0"
smolscale="0.1"
structopt = "0.3.18"
strum = "0.20"
strum_macros = "0.20"
colored = "2.0.0"
tabwriter = "1.2.1"
#tracing-subscriber = "0.2.16"

blkstructs={path="../../libs/blkstructs"}

storage={path="../../libs/storage"}
tmelcrypt={path="../../libs/tmelcrypt"}
nodeprot={path="../../libs/nodeprot"}