[package]
name = "themelio-client"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

[dependencies]
anyhow="1"
async-trait = "0.1.50"
im="15"
hex="0.4"
rustyline = "7.1.0"
serde={version="1", features=["derive"]}
serde_scan = "0.4.1"
serde_json={version="1", features=["arbitrary_precision"]}
sled="0.34.6"
smol="1"
smol-timeout="0.6.0"
smolscale="0.1"
structopt = "0.3.18"
thiserror="1"
colored = "2.0.0"
tabwriter = "1.2.1"

blkstructs={path="../../libs/blkstructs"}
storage={path="../../libs/storage"}
tmelcrypt={path="../../libs/tmelcrypt"}
nodeprot={path="../../libs/nodeprot"}
stdcode={path="../../libs/stdcode"}