[package]
name = "themelio-crypttool"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.67"
structopt = "0.3.23"
themelio-stf = "0.6.3"
tmelcrypt = "0.1.0"