[package]
name = "themelio-crypttool"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.68"
structopt = "0.3.25"
themelio-stf = "0.6.15"
tmelcrypt = "0.2.3"
