[package]
name = "themelio-crypttool"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.79"
structopt = "0.3.26"
themelio-stf = "0.9.12"
themelio-structs = "0.2.1"
tmelcrypt = "0.2.4"
 