[package]
name = "themelio-node"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gethostname]
version = "0.2.1"
optional = true

[dependencies.prometheus]
version = "0.13.0"
optional = true

[dependencies.public-ip]
version = "0.2.1"
optional = true

[dependencies.rusqlite]
version = "0.26.1"
features = ["bundled"]

[dependencies.rweb]
version = "0.15.0"
features = ["tls"]
optional = true

[dependencies.systemstat]
version = "0.1.8"
optional = true

[dependencies]
anyhow = "1.0.44"
async-compat = "0.2.1"
boringdb = "0.3.13"
blkdb = { path = "../../libs/blkdb" }
dashmap = "5.0.0"
default-net = "0.5.0"
env_logger = "0.9.0"
fastrand = "1.5.0"
futures-util = "0.3.17"
hex = "0.4.3"
hostname = "0.3.1"
log = "0.4.14"
lru = "0.7.0"
melnet = "0.1.10"
novasmt = "0.2"
novasymph = { path = "../../libs/novasymph" }
once_cell = "1.8.0"
parking_lot = "0.11.2"
serde = "1.0.130"
serde_json = "1"
smol = "1.2.5"
smolscale = "0.3.16"
smol-timeout = "0.6.0"
stdcode = "0.1.2"
structopt = "0.3.23"
tracing = "0.1.26"
themelio-stf = "0.7.2"
tmelcrypt = "0.2.3"
themelio-bootstrap = "0.3"
themelio-nodeprot = "0.7"
tracing-subscriber = "0.3.3"
meshanina={path="../../../meshanina"}
ethnum="1"
tap="1"

[target.'cfg(unix)'.dependencies]
mimalloc = "0.1.26"

[features]
metrics = ["prometheus", "gethostname", "public-ip", "rweb", "systemstat"]
