[package]
name = "themelio-node"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gethostname]
version = "0.2.1"
optional = true

[dependencies.prometheus]
version = "0.13.0"
optional = true

[dependencies.public-ip]
version = "0.2.1"
optional = true

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dependencies.rweb]
version = "0.15.0"
features = ["tls"]
optional = true

[dependencies.systemstat]
version = "0.1.8"
optional = true

[dependencies]
anyhow = "1.0.52"
arc-swap = "1.5.0"
async-compat = "0.2.1"
boringdb = "0.3.14"
# boringdb = {path="../../../boringdb"}
# blkdb = { path = "../../libs/blkdb" }
dashmap = "5.0.0"
default-net = "0.6.0"
env_logger = "0.9.0"
ethnum = "1.0.4"
fastrand = "1.6.0"
futures-util = "0.3.19"
hex = "0.4.3"
hostname = "0.3.1"
log = "0.4.14"
lru = "0.7.2"
melnet = "0.2.0"
# meshanina = {path="../../../meshanina"}
meshanina= "0.3.8"
novasmt = "0.2.13"
novasymph = { path = "../../libs/novasymph" }
once_cell = "1.9.0"
parking_lot = "0.11.2"
serde = "1.0.133"
serde_json = "1.0.75"
defmac = "0.2.1"
smol = "1.2.5"
smolscale = "0.3.16"
smol-timeout = "0.6.0"
stdcode = "0.1.7"
structopt = "0.3.26"
tap = "1.0.1"
tracing = "0.1.29"
themelio-stf = "0.8.3"
tmelcrypt = "0.2.4"
themelio-bootstrap = "0.4.0"
themelio-nodeprot = { version = "0.9.1", features = ["server"] } 
tracing-subscriber = "0.3.6"
themelio-structs= "0.1.3"
smol_str = "0.1.21"
base64 = "0.13.0"

[target.'cfg(unix)'.dependencies]
mimalloc = "0.1.27"

[features]
metrics = ["prometheus", "gethostname", "public-ip", "rweb", "systemstat"]
