[package]
name = "themelio-node"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gethostname]
version = "0.2.1"
optional = true

[dependencies.prometheus]
version = "0.13.0"
optional = true

[dependencies.public-ip]
version = "0.2.1"
optional = true

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dependencies.rweb]
version = "0.15.0"
features = ["tls"]
optional = true

[dependencies.systemstat]
version = "0.1.8"
optional = true

[dependencies]
anyhow = "1.0.54"
arc-swap = "1.5.0"
async-compat = "0.2.1"
boringdb = "0.3.14"
# boringdb = {path="../../../boringdb"}
# blkdb = { path = "../../libs/blkdb" }
dashmap = "4.0.2"
default-net = "0.6.0"
env_logger = "0.9.0"
ethnum = "1.0.4"
fastrand = "1.7.0"
futures-util = "0.3.21"
hex = "0.4.3"
hostname = "0.3.1"
log = "0.4.14"
lru = "0.7.2"
melnet = "0.2.2"
# meshanina = {path="../../../meshanina"}
meshanina= "0.3.12"
novasmt = "0.2.17"
novasymph = { path = "../../libs/novasymph" }
once_cell = "1.9.0"
parking_lot = { version = "0.11.2", default-features = false, features = ["deadlock_detection"] }
serde = "1.0.136"
serde_json = "1.0.79"
defmac = "0.2.1"
smol = "1.2.5"
smolscale = "0.3.20"
smol-timeout = "0.6.0"
stdcode = "0.1.7"
structopt = "0.3.26"
tap = "1.0.1"
tracing = "0.1.31"
themelio-stf = "0.9.8"
tmelcrypt = "0.2.4"
themelio-bootstrap = "0.5.1"
themelio-nodeprot = { version = "0.10.10", features = ["server"] } 
tracing-subscriber = "0.3.9"
themelio-structs= "0.2.1"
smol_str = "0.1.21"
base64 = "0.13.0"
imbl= "1.0.1"

[target.'cfg(unix)'.dependencies]
mimalloc = "0.1.28"

[features]
metrics = ["prometheus", "gethostname", "public-ip", "rweb", "systemstat"]
