[package]
name = "themelio-spammer"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
governor = "0.3.2"
priority-queue = "1.1.1"
rand = "0.8.4"
smol = "1.2.5"
structopt = "0.3.23"
themelio-nodeprot = "0.4.1"
themelio-stf = "0.5.5"
tmelcrypt = "0.1.0"
smol-timeout = "0.6.0"
