[package]
name = "themelio-spammer"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
governor = "0.3.2"
priority-queue = "1.2.0"
rand = "0.8.4"
smol = "1.2.5"
smol-timeout = "0.6.0"
structopt = "0.3.25"
themelio-nodeprot = "0.6.0"
themelio-stf = "0.6.15"
tmelcrypt = "0.2.3"
