[package]
name = "themelio-spammer"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
governor = "0.3.2"
priority-queue = "1.2.1"
rand = "0.8.5"
smol = "1.2.5"
smol-timeout = "0.6.0"
structopt = "0.3.26"
themelio-nodeprot = "0.10.12"
themelio-stf = "0.9.12"
themelio-structs = "0.2.1"
tmelcrypt = "0.2.4"
 