[package]
name = "autosmt"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "0.5.10"
lazy_static = "1"
hex="0.4.2"
blake3="0.3.3"
bitvec="0.17.4"
rand="0.5.0"
rlp="0.4.5"
lmdb="0.8.0"
snap = "1"
threadpool = "1"
parking_lot="0.10"
tmelcrypt={path="../tmelcrypt"}
log="0.4"