[package]
name = "autosmt"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
hex="0.4.2"
blake3="0.3.3"
bitvec="0.17.4"
rand="0.7"
lmdb="0.8.0"
snap = "1"
parking_lot="0.11"
tmelcrypt={path="../tmelcrypt"}
log="0.4"
enum_dispatch="0.3"
env_logger = "0.7"
bloomfilter="1"
genawaiter={version="0.99", default-features=false}
once_cell="1"
im="15"
serde = {version="1.0.116", features=["derive"]}