[package]
name = "autosmt"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex= "0.4.3"
blake3= "0.3.7"
bitvec= "0.17.4"
# rand="0."
parking_lot= "0.11.1"
tmelcrypt={path="../tmelcrypt"}
stdcode={path="../stdcode"}
log= "0.4.14"
enum_dispatch= "0.3.7"
env_logger = "0.7.1"
bloomfilter= "1.0.5"
genawaiter={ version = "0.99.1", default-features = false }
once_cell= "1.7.2"
im= "15.0.0"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.4"
nanorand= "0.5.2"
sled= "0.34.6"

[[bench]]
name = "benches"
harness = false
