[package]
name = "blkdb"
version = "0.1.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies]
dashmap = "5.0.0"
fastrand = "1.5.0"
# im = "15.0.0"
log = "0.4.14"
novasmt = "0.2"
parking_lot = "0.11.2"
stdcode = "0.1.4"
themelio-stf = "0.7"
thiserror = "1.0.30"
tmelcrypt = "0.2.3"