[package]
name = "blkstructs"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt={path="../tmelcrypt"}
melpow={path="../melpow"}
autosmt={path="../autosmt"}
stdcode={path="../stdcode"}

num_enum = "0.5.0"
hex="0.4.2"
thiserror="1"
rayon="1"
im = {version="15", features=["serde", "rayon"]}
arbitrary={version="0.4.4", features=["derive"]}
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json="1"
logos="0.11"
rand="0.7"
dashmap={version="4", features=["rayon"]}
parking_lot="0.11"
log="0.4"
env_logger = "0.7"
defmac = "0.2"
serde = {version="1.0.116", features=["derive"]}
bytes = { version = "1", features = ["serde"] }
primitive-types = {version="0.7.2", default-features=false, features=["serde"]}
serde_repr = "0.1"
once_cell="1"

[dev-dependencies]
rstest = "0.6.4"