[package]
name = "blkstructs"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt={path="../tmelcrypt"}
melpow={path="../melpow"}
stdcode={path="../stdcode"}
cached= "0.23.0"
num_enum = "0.5.1"
hex= "0.4.3"
thiserror= "1.0.25"
rayon= "1.5.1"
im = { version = "15.0.0", features = ["serde"] }
arbitrary={ version = "0.4.7", features = ["derive"] }
ethnum= "1.0.3"
serde_json={ version = "1.0.64", features = ["arbitrary_precision"] }

dashmap={ version = "4.0.2", features = ["rayon"] }
parking_lot= "0.11.1"
log= "0.4.14"
env_logger = "0.7.1"
defmac = "0.2.1"
serde = { version = "1.0.126", features = ["derive"] }

serde_repr = "0.1.7"
once_cell= "1.7.2"
genawaiter= "0.99.1"
num= "0.3.1"
anyhow= "1.0.40"
tracing= "0.1.26"
rand= "0.7.3"

novasmt= "0.1.6"

[dev-dependencies]
rstest = "0.6.4"
lazy_static = "1.4.0"
beaver = "0.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
logos= "0.11.4"
rand= "0.7.3"
