[package]
name = "loki-logger"
version = "0.1.4"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>", "Meade Kincke <meade@themelio.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A loki logger for the log facade."
edition = "2021"
homepage = "https://github.com/nwmqpa/loki-logger"
repository = "https://github.com/nwmqpa/loki-logger"

[features]
default = [ "trust-dns" ]
blocking = [ "reqwest/blocking" ]
trust-dns = [ "reqwest/trust-dns" ]

[dependencies.reqwest]
version = "0.11.9"
features = ["json", "rustls-tls"]
default-features = false

[dependencies]
log = { version = "0.4.14", features = ["kv_unstable", "std"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
httpmock = "0.6.4"

[[example]]
name = "main"

[[example]]
name = "with_labels"

[[example]]
name = "blocking"
required-features = ["blocking"]