[package]
name = "melnet"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1"
parking_lot="0.10"
min-max-heap = "1"
by_address="1"
log="0.4"
env_logger="0.7"
derivative="2"
smol="1"
im="15"
rand="0.7"
lazy_static="1"
async-net="1"
anyhow="1"
serde = {version="1.0.116", features=["derive"]}
bincode="1"
bytes={version="0.6", features=["serde"]}
smolscale="0.1"
async-oneshot="0.4" 
futures="0.3"
smol-timeout="0.6"