[package]
name = "melnet"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1"
parking_lot="0.10"
min-max-heap = "1"
by_address="1"
log="0.4"
env_logger="0.7"
derivative="2"
smol="1"
smol-timeout="0.6.0"
im="15"
rand="0.7"
lazy_static="1"
async-net="1"
anyhow="1"
serde = {version="1.0.116", features=["derive"]}
bincode="1"
smolscale="0.1.2"