[package]
name = "melnet"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror= "1.0.25"
parking_lot= "0.10.2"
min-max-heap = "1.3.0"
by_address= "1.0.4"
log= "0.4.14"
derivative= "2.2.0"
smol= "1.2.5"
smol-timeout= "0.6.0"
rand= "0.7.3"
lazy_static= "1.4.0"
async-net= "1.6.0"
anyhow= "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
smolscale= "0.2.3"
stdcode="0.1"  
env_logger="0.8"
