[package]
name = "melpow"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt={path="../tmelcrypt"}
im = "15.0.0"
rustc-hash= "1.1.0"
smallvec= "1.6.1"
blake3= "0.3.7"
