[package]
name = "melscript"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary={version="0.4.4", features=["derive"]}
quickcheck = "0.9"
quickcheck_macros = "0.9"
primitive-types = {version="0.7.2", default-features=false, features=["serde"]}
serde = {version="1.0.116", features=["derive"]}
tmelcrypt={path="../tmelcrypt"}
blkstructs={path="../blkstructs"}
bincode = "1.3.1"
im = {version="15", features=["serde"]}
serde_json={version="1", features=["preserve_order"]}
hex="0.4.2"
log="0.4"
env_logger="0.8"