[package]
name = "neosymph"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt={path="../tmelcrypt"}
blkstructs={path="../blkstructs"}
bytes={version="1", features=["serde"]}
serde={version="1", features=["derive"]}
anyhow="1"
im="15"
async-trait="0.1.42"
smol="1"
async-watch2="0.1"
parking_lot="0.11"
log="0.4"
bincode="1"