[package]
name = "neosymph"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt={path="../tmelcrypt"}
blkstructs={path="../blkstructs"}
bytes={version="1", features=["serde"]}
serde={version="1", features=["derive"]}
stdcode={path="../stdcode"}
anyhow="1"
im="15"
async-trait="0.1.42"
smol="1"
parking_lot="0.11"
log="0.4"
async-oneshot="0.4"
smol-timeout="0.6"
once_cell="1"
autosmt={path="../autosmt"}
env_logger="0.8"
smolscale="0.1"

melnet={path="../melnet"}

broadcaster={version="1"}

fastrand="1"