[package]
name = "nodeprot"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdcode={path="../stdcode"}
blkstructs={path="../blkstructs"}
tmelcrypt={path="../tmelcrypt"}
melnet={path="../melnet"} 
serde={version="1", features=["derive"]}

novasmt="0.1.2"

cached="0.23"
hex="0.4"

smol="1"
log="0.4"
futures-util="0.3"