[package]
name = "nodeprot"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdcode="0.1"
themelio-stf="0.1"
tmelcrypt="0.1"
melnet={path="../melnet"} 
serde={ version = "1.0.126", features = ["derive"] }

novasmt= "0.1.6"

cached= "0.23.0"
hex= "0.4.3"

smol= "1.2.5"
log= "0.4.14"
futures-util= "0.3.15"
