[package]
name = "novasymph"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bytes]
version = "1.1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies]
anyhow = "1.0.52"
async-oneshot = "0.5.0"
async-trait = "0.1.52"
blkdb = { path = "../blkdb" }
env_logger = "0.9.0"
fastrand = "1.6.0"
futures-util = "0.3.19"
imbl = "1.0.1"
log = "0.4.14"
melnet = "0.1.15"
novasmt = "0.2.13"
once_cell = "1.9.0"
parking_lot = "0.11.2"
smol = "1.2.5"
smol-timeout = "0.6.0"
stacker = "0.1.14"
stdcode = "0.1.7"
themelio-stf = "0.8.3"
themelio-structs= "0.1.3"
thiserror = "1.0.30"
tmelcrypt = "0.2.4"

derivative= "2.2.0"
