[package]
name = "novasymph"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bytes]
version = "1.1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies]
anyhow = "1.0.55"
async-oneshot = "0.5.0"
async-trait = "0.1.52"
blkdb = { path = "../blkdb" }
env_logger = "0.9.0"
fastrand = "1.7.0"
futures-util = "0.3.21"
imbl = "1.0.1"
log = "0.4.14"
melnet = "0.2.7"
novasmt = "0.2.17"
once_cell = "1.9.0"
parking_lot = "0.11.2"
smol = "1.2.5"
smol-timeout = "0.6.0"
stacker = "0.1.14"
stdcode = "0.1.7"
themelio-stf = "0.9.8"
themelio-structs= "0.2.1"
thiserror = "1.0.30"
tmelcrypt = "0.2.4"

derivative= "2.2.0"
binary-search= "0.1.2"
slab = "0.4.5"
num-traits = "0.2.14"
num-integer = "0.1.44"
