[package]
name = "symphonia"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot="0.10"
tmelcrypt={path="../tmelcrypt"}
log="0.4"
num_enum = "0.5.0"
env_logger = "0.7"
crossbeam-channel="0.4"
rand = "0.7"
futures="0.3"
smol="1"
serde = {version="1.0.116", features=["derive"]}
bincode="1"
smolscale="0.1"
async-trait="0.1"
derive_builder="0.9"
derivative="2.1"
structopt= "0.3.18"
rand_distr="0.3.0"
