[package]
name = "tmelcrypt"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp="0.4"
blake3="0.3"
hex="0.4"
sha2="0.8" 
rand="0.7"
base32="0.4"
arbitrary={version="0.4.4", features=["derive"]}

[dependencies.ed25519-dalek]
features = ["legacy_compatibility"]
version = "1.0.0-pre.3"