[package]
name = "tmelcrypt"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
blake3= "0.3.7"
hex= "0.4.3"
sha2= "0.8.2"
rand= "0.7.3"
base32= "0.4.0"
arbitrary={ version = "0.4.7", features = ["derive"] }
serde-big-array = "0.3.2"
stdcode={path="../stdcode"}

[dependencies.ed25519-dalek]
features = ["legacy_compatibility"]
version = "1.0.1"
